networking/network-policy/network-policy-demo/deployment/bouvier/selma-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: selma
    app.kubernetes.io/component: selma
    app.kubernetes.io/instance: selma
    app.kubernetes.io/name: selma
    app.kubernetes.io/part-of: selma
    app.openshift.io/runtime-version: micro
  name: selma
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: selma
    deployment: selma
