networking/network-policy/network-policy-demo/deployment/bouvier/patty-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: patty
    app.kubernetes.io/component: patty
    app.kubernetes.io/instance: patty
    app.kubernetes.io/name: patty
    app.kubernetes.io/part-of: patty
    app.openshift.io/runtime-version: micro
  name: patty
spec:
  port:
    targetPort: 8080-tcp
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: patty
    weight: 100
  wildcardPolicy: None
